# madhacks

./: README.md
backend/: example.in.json  example.out.json  main.py  pyproject.toml
backend/suite/: gpt.py  memory.py  runner.py  timing.py  tracing.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.svelte  app.postcss  store.ts
frontend/src/lib/: CodeInput.svelte  DropdownLanguage.svelte  InputInput.svelte  LeftComponent.svelte  RightComponent.svelte
