[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["eniraa <accounts+github@eji.moe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
openai = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
